--- a/login/css/style.css
+++ b/login/css/style.css
@@ -77,6 +77,7 @@ p{
 
 #chat{
     color: white;
+    text-align: end;
 }
 
 h1{
@@ -107,6 +108,7 @@ input{
     height: 35px;
     border-radius: 10px;
     width: 290px;
+    margin-bottom: 10px;
 }
 
 #ajuste{
@@ -121,7 +123,6 @@ input{
     display: flex;
     justify-content: center;
 }
-
 
 
 
@@ -154,7 +155,8 @@ label{
     transition: 0.2 ease;
     font-size: 18px;
     margin-left: 32%;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 .entrar:hover{
     transform: translateY(-4px);
@@ -163,13 +165,27 @@ label{
     color: black;
 }
 
+/*---------------------------------------------*/
 
 
+/*--------------- CADASTRO ----------------*/
 
-
-
-
-.cadastro{
-    transform: rotate(110deg);
+.cadastro, p{
+    font-size: 16px;
     bottom: 0;
+    text-align: center;
+}
+
+/*------------------------------------------*/
+
+.voltar{
+    width: 130px;
+    text-align: center;
+    margin-left: 20px;
+}
+.vol{
+    width: 50px;
+}
+.vol:hover{
+    transform: translateY(-4px);
 }
