--- a/pesquisa/css/style.css
+++ b/pesquisa/css/style.css
@@ -12,7 +12,8 @@ header{
     display: flex;
     justify-content: space-between;
     background: linear-gradient(to bottom, #5EECF5, #024751);
-    width: 800px;
+    width: 100%;
+    height: 90px;
     text-align: start;
 }
 
@@ -24,11 +25,14 @@ header{
 
 #fundo{
     background-color: black;
-    width: 800px;
-    height: 800px;
-    margin-top: 4%;
+    width: 100%;
+    height: 950px;
+
+    /*
     border-end-end-radius: 100px;
     border-end-start-radius: 100px;
+    */
+    
 }
 
 
@@ -98,6 +102,8 @@ input{
     height: 40%;
     margin-top: 5%;
     border-end-start-radius: 60px;
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -119,3 +125,59 @@ input{
     width: 40px;
 }
 /*----------------------------------------------------*/
+/*------------------------contatos---------------------*/
+
+.contato{
+    width: 300px; /* Largura da caixa */
+    height: 300px; /* Altura da caixa */
+    overflow-y: scroll; /* Adiciona a barra de rolagem vertical */
+    border: 1px solid #024751; /* Borda da caixa */
+    padding: 10px; /* Espaçamento interno */
+    margin-left: 5%;
+    margin-top: 3%;
+}
+
+.contatos{
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.boneco{
+    width: 50px;
+    height: 40px;
+}
+.usuario{
+    width: 200px;
+    height: 45px;
+    font-size: 30px;
+    background: #848484;
+    color: white;
+    border-radius: 50px;
+    margin-left: 10px;
+}
+/*-----------------------------------------------------*/
+
+.scroll-container {
+    width: 400px; /* Largura da caixa */
+    height: 250px; /* Altura da caixa */
+    overflow-y: scroll; /* Adiciona a barra de rolagem vertical */
+    border: 1px solid none; /* Borda da caixa */
+    padding: 10px; /* Espaçamento interno */
+}
+
+.opcao {
+    margin: 10px 0;
+    border-radius: 50px;
+    background: #ACACAC;
+    width: 150px;
+    height: 40px;
+    font-size: 30px;
+}
+.opçao{
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+    margin-top: 9px;
+}
