--- a/login/css/style.css
+++ b/login/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgba(0, 0, 0, 0.884);
+    background-color: black;
 }
 
 main{
@@ -25,10 +25,7 @@ header{
 
 #fundo{
     background-color: black;
-    width: 800px;
-    height: 750px;
-    margin-top: 4%;
-    border-radius: 100px;
+    width: 100%;
 }
 
 span{
@@ -51,15 +48,14 @@ a{
 
 .quadrado{
     background: linear-gradient(to left, #5EECF5, #024751);
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     transform: rotate(-110deg);
     border-radius: 130px;
     display: flex;
     justify-content: center;
-    margin-top: 10%;
-    margin-left: 10%;
-
+    margin-top: 5%;
+    margin-left: 3%;
 }
 
 p{
@@ -104,18 +100,29 @@ span{
     flex: 1;
 }
 /*--------------- login --------------*/
+#login{
+    display: flex;
+    justify-content: center;
+    margin-left: 150px;
+    margin-right: 50px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+
 input{
-    height: 35px;
+    height: 40px;
     border-radius: 10px;
     width: 290px;
     margin-bottom: 10px;
+    font-size: large;
 }
 
 #ajuste{
     transform: rotate(110deg);
     /*background-color: #024751;*/
-    height: 60%;
-    width: 60%;
+    height: 20%;
+    width: 20%;
     align-items: center;
     margin-top: 110px;
     flex-wrap: wrap;
@@ -137,7 +144,7 @@ label{
 
 .a{
     color: white;
-    font-size: 18px;
+    font-size: 19px;
 }
 .a:hover{
     text-align: center;
@@ -171,7 +178,7 @@ label{
 /*--------------- CADASTRO ----------------*/
 
 .cadastro, p{
-    font-size: 16px;
+    font-size: 20px;
     bottom: 0;
     text-align: center;
 }
@@ -181,10 +188,10 @@ label{
 .voltar{
     width: 130px;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 5%;
 }
 .vol{
-    width: 50px;
+    width: 75px;
 }
 .vol:hover{
     transform: translateY(-4px);
